--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <title>Davis McPhee</title>
   </head>
   <body>
-    <div id="root"></div>
+    <main id="root"></main>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
